<resources>
    <string name="app_name">Nisar_store</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="insert">Insert</string>
    <string name="name">Name</string>
    <string name="mob">Mobile</string>
    <string name="place">Place</string>
    <string name="enter_the_place">Enter the place</string>
    <string name="total">Total</string>
    <string name="enter_the_total_amount">Enter amount</string>
    <string name="enter_the_mobile">Enter the Mobile</string>
    <string name="update">Update</string>
    <string name="history">History</string>
    <string name="amount">amount</string>
    <string name="date">date</string>
    <string name="time">Time</string>
    <string name="add">Add ₹</string>
    <string name="mobile2">mobile2</string>
    <string name="a_mobile">Amobile</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="delete">Delete</string>
    <string name="mobile">Mobile</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
</resources>