<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.Update_Activity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp">
<!--        <LinearLayout-->
<!--            android:id="@+id/linear1"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@color/colorPrimary"-->
<!--            android:orientation="vertical"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toStartOf="parent">-->
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/update"-->
<!--                android:textSize="25sp"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:gravity="center_vertical"-->
<!--                android:textColor="@android:color/white"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"/>-->
<!--        </LinearLayout>-->
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/upName"
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/upname_etxt"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textCapSentences"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="Enter the Name"
                    android:textColorHint="@color/colorhint"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/trplace"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:text="@string/place"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />


                <EditText
                    android:id="@+id/uppalce_etxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/enter_the_place"
                    android:singleLine="true"
                    android:inputType="textCapSentences"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorhint"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/trmaobile"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:text="@string/a_mobile"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />


                <EditText
                    android:id="@+id/upaMobile_etxt"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_the_mobile"
                    android:singleLine="true"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorhint"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:gravity="center">
                <Button
                    android:id="@+id/update_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/update"
                    android:gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button" />
                <Button
                    android:id="@+id/delete_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/delete"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>